--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div id="wrapper">
             <img src="doc/christophe-eyl-cropped.png" alt="Christophe Eyl picture's" title="Christophe EYL">
             <h1 id="h1_title">Christophe EYL</h1>            
-            <p id="p_tittle">Full-Stack Dev #Typescript, #API, #NestJS FR</p>
+            <p id="p_tittle">Full-Stack Dev #Typescript, #API FR</p>
             <hr />
             <ul id="icons_tittle">
                 <li>
