--- a/onepage.html
+++ b/onepage.html
@@ -8,30 +8,30 @@
         <title>Christophe Eyl</title>
     </head>
     <body class="text-white bg-[#031C32] font-['Encode Sans Semi Expanded', sans-serif']">
-        <div class="px-60  grid grid-cols-2 my-12">
-            <div class="grid place-items-center">            
+        <div class="lg:px-60 sm:px-10 lg:my-12 grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-2">
+            <div class="grid place-items-center sm:text-center">            
                 <div>
                     <p class="text-xl font-bold">Hello! C'est</p>
                     <p class="text-5xl font-bold py-4">Christophe EYL</p>
                     <p class="text-xl font-bold">développeur fullstack</p>
                 </div>
             </div>
-            <div>
+            <div class="grid grid-cols-1 content-center">
                 <img class="mx-auto" src="assets/eyl_groupe.png" alt="Christophe Eyl picture's" title="Christophe EYL">
             </div>
         </div>
-        <div class="bg-[#E64344] grid grid-cols-4 place-items-center h-32 mb-10">
+        <div class="bg-[#E64344] grid grid-cols-1 gap-6 md:grid-cols-4 place-items-center md:h-32 text-center md:text-left mb-10">
             <p>
                 <span class="text-xl font-bold">5+</span><br>
                 <span class="text-base">Années d'expériences</span>
             </p>
             <p>
-                <span class="text-xl font-bold">4</span>
+                <span class="text-xl font-bold">4</span><br>
                 <span class="text-base">projets lancés</span><br>
                 <span class="text-base">dans mon actuel job</span>
             </p>
             <p>
-                <span class="text-xl font-bold">1</span>
+                <span class="text-xl font-bold">1</span><br>
                 <span class="text-base">projet lancé</span><br>
                 <span class="text-base">sur mon temps libre</span>
             </p>
@@ -40,11 +40,11 @@
                 <span class="text-base">& connaissance en graphic design</span>
             </p>
         </div>
-        <div class="px-60  grid grid-cols-2 gap-10 my-12">
+        <div class="px-10 xl:px-60 grid grid-cols-1 md:grid-cols-2 gap-10 my-12">
             <div class="grid place-items-center">            
                 <div>
                     <div class="text-left text-xl font-bold mb-4">À propos de moi</div>
-                    <p class="text-sm 2xl:text-base leading-7 text-justify">
+                    <p class="text-sm 2xl:text-base text-justify">
                         Salut, je m'appelle Christophe Eyl, je suis développeur fullstack. J'ai commencé à
                         travailler après l'été 2017 suite à l'obtention de mon diplôme à Toulouse. Je me suis
                         tout de suite rendu sur Paris car je savais que j'allais trouver de belles opportunités
@@ -52,26 +52,25 @@
                         puis confirmé et aujourd'hui je suis ouvert à des postes plus senior.
                     </p>
                     <br>
-                    <p class="text-sm 2xl:text-baseleading-7 text-justify">
+                    <p class="text-sm 2xl:text-base text-justify">
                         Je sais aujourd'hui comment construire un site de A à Z avec des technologies viables et comment le mettre en ligne.
                         Je peux intervenir aussi bien sur le front que sur le back et j'ai des connaissances avancées sur le cloud. 
                         J'ai également pu pratiquer la conception de maquette.
                     </p>
                 </div>
             </div>
-            <div>
+            <div class="grid grid-cols-1 content-center">
                 <img class="mx-auto" src="assets/kindpng_1127618.png" alt="Christophe Eyl picture's" title="Christophe EYL">
             </div>
         </div>
-        <div class="2xl:px-60 ">
+        <div class="px-10 xl:px-60">
             <div class="text-center text-xl font-bold">Mes compétences</div>
-            <div class="flex items-center justify-center bg-white rounded-tr-lg rounded-bl-lg h-24 p-4 my-6 text-center">
-                <img class="h-full object-contain mx-6" src="assets/react.png" alt="react logo" title="React">
-                <img class="h-full object-contain mx-6" src="assets/next.png" alt="next logo" title="Next">
-                <img class="h-full object-contain mx-6" src="assets/redux.png" alt="redux logo" title="Redux">
-                <img class="h-full object-contain mx-6" src="assets/tailwind.png" alt="tailwind logo" title="Tailwind">
-                <img class="h-full object-contain mx-6" src="assets/nestjs.png" alt="redux logo" title="Nest">
-                <img class="h-full object-contain mx-6" src="assets/typeorm.png" alt="tailwind logo" title="Typeorm">
+            <div class="grid grid-cols-1 sm:grid-cols-5 gap-6 flex items-center bg-white rounded-tr-lg rounded-bl-lg my-6 px-4">
+                <img class="mx-auto w-60" src="assets/react.png" alt="react logo" title="React">
+                <img class="mx-auto w-60" src="assets/next.png" alt="next logo" title="Next">
+                <img class="mx-auto w-60" src="assets/redux.png" alt="redux logo" title="Redux">
+                <img class="mx-auto w-60" src="assets/tailwind.png" alt="tailwind logo" title="Tailwind">
+                <img class="mx-auto w-60" src="assets/nestjs.png" alt="nestjs logo" title="Nest">
             </div>
         </div>
         <div class="bg-[#E64344] grid place-items-center h-20 text-center">
